# idzebra

./: .cvsignore  .gitignore  .travis.yml  CHANGELOG  Doxyfile.in  IDMETA  LICENSE.2  LICENSE.zebra  Makefile  Makefile.am  Makefile.in  NEWS  ONEWS  README  README.md  TODO  aclocal.m4  buildconf.sh  configure  configure.ac  configure.in  idzebra-config-2.0.in  idzebra-config.in  idzebra.m4  idzebra.spec  idzebra.spec.in  mkinstalldirs  version-change.txt  yaz.m4  zebra.dsp  zebra.dsw  zebra.pc.in  zebra.spec  zmbol.spec
bfile/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  bfile.c  cfile.c  cfile.h  commit.c  mfile.c  mfile.h  tstbfile1.c  tstbfile2.c  tstmfile1.c
data1/: .gitignore  Makefile.am  d1_absyn.c  d1_attset.c  d1_doespec.c  d1_espec.c  d1_expout.c  d1_grs.c  d1_handle.c  d1_if.c  d1_map.c  d1_marc.c  d1_prtree.c  d1_read.c  d1_soif.c  d1_sumout.c  d1_sutrs.c  d1_tagset.c  d1_utils.c  d1_varset.c  d1_write.c
dfa/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  agrep.c  bset.c  dfa.c  dfap.h  grepper.c  imalloc.c  imalloc.h  lexer.c  lexer.h  readfile.c  set.c  states.c  test_dfa.c
dict/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  close.c  dclose.c  dcompact.c  delete.c  dict-p.h  dictext.c  dicttest.c  dopen.c  drdwr.c  insert.c  inserttest.c  lookgrep.c  lookup.c  lookupec.c  open.c  scan.c  scantest.c
doc/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  Notes  README  administration.xml  alvisxmlrecordmodel.xml  architecture.xml  entities.ent  examples.xml  field-structure.xml  gils.sgml  harvest.mbox  idzebra-abs2dom.xml  idzebra-config-man.sgml  idzebra-config-man.xml  idzebra-config.xml  idzebra.xml  indexdata.xml  installation.xml  introduction.xml  isam-hint  license.xml  local.ent.in  marc_indexing.sgml  marc_indexing.xml  querymodel.xml  quickstart.xml  recordmodel-alvisxslt.xml  recordmodel-domxml.xml  recordmodel-grs.xml  recordmodel.xml  server.xml  tutorial.xml  zebra.eps  zebra.sgml  zebra.xml  zebra.xml.in  (+15 more)
examples/gils/: .cvsignore  Makefile.am  frontend.cfg  xs-pwfile  xs-test.cfg  yazgfs.xml  zebra.cfg
examples/marcxml/: .gitignore  MARC21slim.xsd  MARC21slim2INDEX.xsl  MARC21slim2MADS.xsl  MARC21slim2MODS3-1.xsl  MARC21slim2MODS3-7.xsl  MARC21slim2MODS3.xsl  MARC21slim2SRWDC.xsl  Makefile.am  README  collection-clasmrc-231.xml  collection-clasmrc.xml  collection-namemrc-273.xml  collection-namemrc.xml  collection-opera-43.xml  collection-sandburg-1.xml  collection-subjmrc-193.xml  collection-subjmrc.xml  dom-config.xml  filter_alvis_conf.xml  identity.xsl  marc.xml  yazgfs.xml  zebra.cfg  zebra.xsl
examples/oai-pmh/: Makefile.am  README
examples/zthes/: .gitignore  Makefile  Makefile.am  Zthes.abs  dino.tree  tagsetg-zthes.tag  tagsetg.tag  tagsetm-zthes.tag  tree2xml.pl  zebra.cfg  zthes.att  zthes.tag
include/: .gitignore  Makefile.am  Makefile.in  attrfind.h  bfile.h  bset.h  charmap.h  d1_absyn.h  d1_attset.h  d1_map.h  data1.h  dfa.h  dfaset.h  dict.h  direntz.h  index_rules.h  index_types.h  isam-codec.h  isam.h  isamb.h  isamc.h  isamd.h  isamg.h  isamh.h  isams.h  it_key.h  mfile.h  passwddb.h  recctrl.h  res.h  rob_regexp.h  rsbetween.h  rsbool.h  rset.h  rsisam.h  rsisamb.h  rsisamc.h  rsisamd.h  rsisams.h  rsm_or.h  (+17 more)
include/idzebra/: .gitignore  Makefile.am  api.h  api_swig.h  bfile.h  data1.h  dict.h  flock.h  isam-codec.h  isam.h  isamb.h  isamc.h  isams.h  recctrl.h  recgrs.h  res.h  snippet.h  util.h  version.h  version.h.in  zebramap.h
index/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  alvis.c  api_swig.c  apitest.c  attribute.c  check_res.c  compact.c  dir.c  dirs.c  extract.c  index.h  indexplugin.h  inline.c  inline.h  invstat.c  isam_methods.c  kcompare.c  kcontrol.c  kdump.c  key_block.c  key_block.h  kinput.c  limit.c  livcode.c  lockidx.c  locksrv.c  lockutil.c  main.c  marcomp.c  marcomp.h  marcread.c  mod_alvis.c  mod_dom.c  mod_grs_marc.c  mod_grs_regx.c  mod_grs_sgml.c  (+55 more)
isam/: Makefile  Makefile.am  Makefile.in  isam.c  issh.c  isutil.c  isutil.h  keyops.h  memory.c  memory.h  physical.c  physical.h  rootblk.c  rootblk.h
isamb/: .cvsignore  .gitignore  Makefile.am  Makefile.in  bench1.plt  bench1.sh  bench2.plt  bench2.sh  benchindex1.c  benchisamb.c  dictisam.plt  filesystems.plt  isamb.c  tstisamb.c
isamc/: Makefile  Makefile.am  Makefile.in  isamc-p.h  isamc.c  isamd-p.h  isamd.c  isamh-p.h  isamh.c  isams.c  merge-d.c  merge.c
isams/: Makefile.am  Makefile.in  isams.c
recctrl/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  alvis.c  csvread.c  danbibr.c  grsread.h  inline.c  inline.h  marcomp.c  marcomp.h  marcread.c  perlread.c  perlread.h.in  recctrl.c  recgrs.c  recgrs.h  rectext.c  rectext.h  regxread.c  safari.c  sgmlread.c  xmlread.c  xslt.c
rset/: .gitignore  Makefile  Makefile.am  Makefile.in  rsbetween.c  rsbool.c  rset.c  rsisam.c  rsisamb.c  rsisamc.c  rsisamd.c  rsisams.c  rsm_or.c  rsmultiandor.c  rsmultior.c  rsnull.c  rsprox.c  rsrel.c  rssbool.c  rstemp.c
tab/: Makefile  Makefile.am  Makefile.in  bib1.att  dan1.att  danbib.abs  danmarc.abs  danmarc.mar  default.idx  explain.abs  explain.att  explain.tag  generic.tag  gils-b.est  gils-f.est  gils-g.est  gils-usmarc.map  gils.abs  gils.att  gils.tag  hci.flt  icu.idx  idxpath.att  mail.flt  marc21.abs  meta-usmarc.map  meta.abs  news.flt  numeric.chr  nwi.flt  phrases-icu.xml  pqf.properties  refer.flt  rules2abs.tcl  scan.chr  sgml.flt  soif.flt  string.chr  summary.abs  summary.tag  (+11 more)
test/api/: .cvsignore  .gitignore  Makefile.am  t0.c  (+78 more)
util/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  abs2dom  atoi_zn.c  attrfind.c  charmap.c  dirent.c  emptycharmap.chr  exit.c  flock.c  idzebra-abs2dom  index_rules.c  index_types.c  it_key.c  passtest.c  passwddb.c  res-test.c  res.c  rob_regexp.c  snippet.c  strmap.c  su_codec.c  test_strmap.c  timing.c  tst_index_rules.c  tst_index_types.c  tstcharmap.c  tstcharmap.chr  tstcharmap_utf8.chr  tstflock.c  tstlockscope.c  tstpass.c  tstpass.txt  tstres.c  tstres.cfg  version.c  xpath.c  (+5 more)
(+487 files in other folders)
